fixed image spacing

--- a/style.css
+++ b/style.css
@@ -386,12 +386,14 @@ header{
 .portfolio{
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	height: 14em;
 }
 
 .portfolio__item{
 	background: var(--clr-accent);
 	overflow: hidden;
 }
+
 
 .portfolio__img{
 	transition: 
